0.1
- Created header class to handle attributes
- Created relation class
- Added union
- Added intersection
- Added difference
- Added product
- Added projection
- Added rename
- Projection can use a list or several parameters
- Added selection
- Added left join
- Added right join
- Added capability of operation even if attributes aren't in the same order
- Added full outher join

0.2
- Created parser module
- Created function to parse expression with operators without parameters
- Created recoursive function to parse expressions

0.3
- Added support for parenthesis in relational queries

0.4
- Created GUI

0.5
- Added support for float numbers
- Added support for dates

0.6
- Fixes to run on Mac OsX
- Added Makefile
- Able to create .app MacOsX files using "make app"
- Able to create tar.gz file containing Mac OsX application and samples using "make mac"

0.7
- Added README