@@ -4,3 +4,4 @@ To launch the application, run
 
 If it needs some dependencies, check this page:
 http://galileo.dmi.unict.it/wiki/relational/doku.php?id=download#install
+
